# braindough

./: .gitignore  AGENTS.md  README.md  hk.pkl  justfile  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  artifacts.md  experiment-backlog.md  legal-data.md  storage.md  tribe-v2.md
docs/execplans/: 2026-05-08-braindough-bootstrap.md  2026-05-08-iterate-three-experiments.md  2026-05-09-bold5000-real-data-benchmark.md  2026-05-16-tribe-v2-registered-preprint.md  2026-05-17-focused-ultrasound-bridge.md
docs/research/: 2026-05-08-counterfactual-editing-workbench-deep-research.md  2026-05-08-counterfactual-editing-workbench-deep-research.metadata.json  2026-05-08-deep-research-status.md  2026-05-08-discrete-stimulus-optimizer-deep-research.md  2026-05-08-discrete-stimulus-optimizer-deep-research.metadata.json  2026-05-08-executive-summary-deep-research.md  2026-05-08-executive-summary-deep-research.metadata.json  2026-05-08-latent-network-ica-explorer-deep-research.md  2026-05-08-latent-network-ica-explorer-deep-research.metadata.json  2026-05-08-project-deep-research-report.md  2026-05-08-project-deep-research-report.metadata.json  2026-05-08-virtual-lesion-lab-deep-research.md  2026-05-08-virtual-lesion-lab-deep-research.metadata.json  (+2 more)
scripts/: artifact_validator.py  report_run.py  research_validator.py  storage_doctor.py  tribe_doctor.py
tests/: test_analysis.py  test_bold5000.py  test_cli.py  test_config.py  test_executive_summary.py  test_runner_artifacts.py  test_stimuli.py  test_storage.py  test_tooling_contract.py
(+37 files in other folders)
